--- a/config/database.yml
+++ b/config/database.yml
@@ -84,8 +84,8 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-#production:
-#  <<: *default
-#  database: quiz_app_production
-#  username: quiz_app
-#  password: <%= ENV["QUIZ_APP_DATABASE_PASSWORD"] %>
+production:
+  <<: *default
+  database: quiz_app_production
+  username: quiz_app
+  password: <%= ENV["QUIZ_APP_DATABASE_PASSWORD"] %>
