--- a/config/database.yml
+++ b/config/database.yml
@@ -84,8 +84,18 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: quiz_app_production
-  username: quiz_app
-  password: <%= ENV["QUIZ_APP_DATABASE_PASSWORD"] %>
+#production:
+#  <<: *default
+#  database: quiz_app_production
+#  username: quiz_app
+#  password: <%= ENV["QUIZ_APP_DATABASE_PASSWORD"] %>
+
+  production:
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: database3
+  username: luximo1
+  password: <%= ENV['QUIZ_APP_DATABASE_PASSWORD'] %>
+  host: database3.c1ue2oe6287l.us-east-1.rds.amazonaws.com
+  port: 5432
